add new env example name

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-BASE_URL=""
+NGROK_OR_HOSTED_SERVER_URL=""
 
 POSTGRES_URL=""
 POSTGRES_URL_NON_POOLING=""
@@ -7,5 +7,4 @@ POSTGRES_HOST=""
 POSTGRES_PASSWORD=""
 POSTGRES_DATABASE=""
 
-SYNDICATE_API_KEY=
 RESERVOIR_API_KEY=
