Updated db operations

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,8 @@ POSTGRES_PASSWORD=""
 POSTGRES_DATABASE=""
 
 RESERVOIR_API_KEY=
+
+#Contract configuration
+RPC_URL = https://goerli.base.org
+PIMLICO_API_KEY = ""
+OPERATOR_MNEMONIC = ""
