Feat: Add serverless function to record pool participation onchain
Added a recordParticipation endpoint under API to fetch all participations not onchain yet, update them onchain and update the participation in DB to onchain

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,9 @@ POSTGRES_DATABASE=""
 RESERVOIR_API_KEY=
 
 #Contract configuration
-RPC_URL = https://goerli.base.org
+RPC_URL = ""
 PIMLICO_API_KEY = ""
 OPERATOR_MNEMONIC = ""
+CRON_SECRET  = ""
+``
+
