--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,7 @@
     }, 
     {
       "path": "/api/recordParticipation",
-      "schedule": "0 */6 * * *"
+      "schedule": "0 10 * * *"
     }
   ]
     
