--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "14.1.0",
     "pg": "^8.11.3",
     "react": "^18",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18",
     "text-to-svg": "^3.1.5"
   },
