--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@liquality/my-collectives-sdk": "^2.1.23",
     "@syndicateio/syndicate-node": "0.0.449",
     "@vercel/postgres": "0.7.2",
+    "axios": "^1.6.7",
     "ethers5": "npm:ethers@^5.7.2",
     "micro": "10.0.1",
     "next": "14.1.0",
