--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.6.7",
     "ethers5": "npm:ethers@^5.7.2",
     "micro": "10.0.1",
+    "mkdirp": "^3.0.1",
     "next": "14.1.0",
     "pg": "^8.11.3",
     "react": "^18",
